# edrstore

./: README.md
Baseline/: .gitignore  CMakeLists.txt  README.md  config.json  gcc_u.sh
Baseline/include/: configure.h  const_var.h  data_structure.h  define.h  lruCache.h
Baseline/include/chunker/: fastcdc_chunker.h  finesse_util.h  fix_chunker.h  (+1 more)
Baseline/script/: trace_exp.py
Baseline/src/: CMakeLists.txt
Baseline/src/app/: CMakeLists.txt  client_main.cc  km_main.cc  server_main.cc
Baseline/src/chunker/: CMakeLists.txt  abs_chunker.cc  finesse_util.cc  rabin_poly.cc
Baseline/src/client/: CMakeLists.txt  chunker_fp_thd.cc  comp_pad.cc  data_retriever_thd.cc  key_gen_thd.cc  mle.cc  plain_similar_thd.cc  select_comp_thd.cc  sender_thd.cc
Baseline/src/database/: abs_db.cc  rocksdb_db.cc
Baseline/src/key_manager/: basic_km.cc
Baseline/src/network/: CMakeLists.txt  ssl_conn.cc
Baseline/src/reduction/: CMakeLists.txt  dedup_detect.cc  similar_policy.cc
Baseline/src/server/: CMakeLists.txt  client_var.cc  data_decoder_thd.cc  data_reader_thd.cc  data_recv_thd.cc  data_writer_thd.cc  server_opt_thd.cc  storage_core.cc
Baseline/src/util/: configure.cc  crypto_util.cc
EDRStore/: .gitignore  CMakeLists.txt  README.md  config.json  recomplie.sh  setup.sh  similar.json
EDRStore/include/: configure.h  const_var.h  data_structure.h  define.h  lruCache.h  readCache.h
EDRStore/script/: trace_exp.py  tst.sh
EDRStore/src/: CMakeLists.txt
Script/: get_chrome_source_code.py  get_docker.py  get_emacs_source_code.py  get_gcc_source_code.py  get_gdb_source_code.py  get_glibc_source_code.py  get_linux_rc.py  get_scilab_source_code.py  get_tensorflow_source_code.py
(+111 files in other folders)
